--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
-    "axios": "^0.18.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
+    "axios": "^0.20.0",
+    "buefy": "^0.9.21",
     "core-js": "3.6.5",
     "echarts": "^4.9.0",
     "element-ui": "2.13.2",
@@ -23,8 +27,8 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "v-charts": "^1.19.0",
-    "vue": "2.6.10",
-    "vue-axios": "^3.4.0",
+    "vue": "2.6.11",
+    "vue-axios": "^3.4.1",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
@@ -49,7 +53,7 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.11"
   },
   "browserslist": [
     "> 1%",
